--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Bungee&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:wght@600&family=Rubik:ital,wght@1,500&display=swap');
 
 
 
@@ -21,7 +20,7 @@ body{
 }
 
 h1{
-    font-family: 'Bungee';
+    font-family: 'Noto Serif';
     color: #fff;
 }
 
